# stt_tool

./: .gitignore  README.md  doc_vosk.md  pyproject.toml  use_vosk.py  use_whisper.py
